@@ -392,7 +392,7 @@ ORACLEUSERPATH = @ORACLEUSERPATH@
 ifneq ($(strip $(ORACLELIBS)),)
 ifneq ($(strip $(ORACLELIBSPATH)),)
 ifeq ($(ORACLEUSERPATH),yes)
-ORACLELIBS += -R $(ORACLELIBSPATH)
+ORACLELIBS += @DISABLE_NEW_DTAGS@ -R $(ORACLELIBSPATH)
 endif
 endif
 endif
