@@ -664,6 +664,7 @@ FW_CHECK_WNOOVERLOADEDVIRTUAL
 FW_CHECK_WNOMISMATCHEDTAGS
 FW_CHECK_WNOUNKNOWNPRAGMAS
 FW_CHECK_DEBUG
+FW_CHECK_NEW_DTAGS
 
 FW_CHECK_F_NO_BUILTIN
 
